--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-coucou !
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Alexandre Achain, Développeur Web</title>
+</head>
+<body>
+    <h1>Développeur Web en Freelance</h1>
+</body>
+</html>
