--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Alexandre Achain, Développeur Web</title>
 </head>
 <body>
-    <h1>Développeur Web en Freelance</h1>
+    <header>
+        <h1>Développeur Web en Freelance</h1>
+    </header>
+    <section>
+
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
