--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+	<link rel="apple-touch-icon" sizes="57x57" href="/media/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/media/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/media/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/media/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/media/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/media/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/media/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/media/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/media/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/media/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/media/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-16x16.png">
+	<link rel="manifest" href="/media/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/media/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
     <title>Alexandre Achain, Développeur Web</title>
 </head>
 <body>
